--- a/BackEnd/appsettings.json
+++ b/BackEnd/appsettings.json
@@ -1,12 +1,12 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection":
+      "DefaultConnection": "Server=$DB_SERVER;Database=testeDB;User Id=techtitans_teste;Password=$DB_PASS;TrustServerCertificate=true;"
     },
     "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft.AspNetCore": "Warning"
+      }
     },
     "AllowedHosts": "*"
-}
+  }
