docker-compose rodando nas portas 8081 e 8082

--- a/.gitignore
+++ b/.gitignore
@@ -363,5 +363,5 @@ MigrationBackup/
 FodyWeavers.xsd
 
 # #appsettings
-# appsettings.json
-# appsettings.*.json
+appsettings.json
+appsettings.*.json
