--- a/BackEnd/UserModule/UserAPI/Dockerfile
+++ b/BackEnd/UserModule/UserAPI/Dockerfile
@@ -6,18 +6,18 @@ EXPOSE 8081
 # Use a imagem base do SDK do ASP.NET Core para compilar o aplicativo
 FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
 WORKDIR /src
-COPY ["TechTitansAPI.csproj", "TechTitansAPI.csproj"]
-RUN dotnet restore "TechTitansAPI.csproj"
+COPY ["UserAPI.csproj", "UserAPI.csproj"]
+RUN dotnet restore "UserAPI.csproj"
 COPY . .
 WORKDIR "/src"
-RUN dotnet build "TechTitansAPI.csproj" -c Release -o /app/build
+RUN dotnet build "UserAPI.csproj" -c Release -o /app/build
 
 # Publica o aplicativo
 FROM build AS publish
-RUN dotnet publish "TechTitansAPI.csproj" -c Release -o /app/publish
+RUN dotnet publish "UserAPI.csproj" -c Release -o /app/publish
 
 # Cria a imagem final
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "TechTitansAPI.dll"]
+ENTRYPOINT ["dotnet", "UserAPI.dll"]
