--- a/BackEnd/docker-compose.yml
+++ b/BackEnd/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
   app_pessoal:
     build: 
-      context: ./DBModule  
+      context: ./UserModule/UserAPI 
       dockerfile: Dockerfile 
     container_name: green_pessoal_API
     ports:
