--- a/.gitignore
+++ b/.gitignore
@@ -362,6 +362,7 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 
-# #appsettings
+#appsettings
 appsettings.json
 appsettings.*.json
+/BackEnd/appsettings.json
