--- a/BackEnd/docker-compose.yml
+++ b/BackEnd/docker-compose.yml
@@ -6,26 +6,33 @@ services:
       context: ./UserModule/UserAPI  
       dockerfile: Dockerfile 
     container_name: green_pessoal_API
-    expose:
-      - "8081"
+    ports:
+      - "8081:8081"
+    networks:
+      - network
 
   app_empresa:
     build: 
      context: ./CompanyModule
      dockerfile: Dockerfile 
     container_name: green_empresa_API
-    expose:
-      - "8082"
+    ports:
+      - "8082:8082"
+    networks:
+      - network
+
 
   modulodb:
     build: 
      context: ./DBModule
      dockerfile: Dockerfile 
     container_name: DBModule_API
-    expose:
-      - "8083"
+    ports:
+      - "8083:8083"
+    networks:
+      - network
 
 # como as apis nao se conversam entre si não preciso de bridge
-# networks:
-#   app_404:
-#     driver: bridge
+networks:
+  network:
+    driver: bridge
