--- a/BackEnd/CompanyModule/Dockerfile
+++ b/BackEnd/CompanyModule/Dockerfile
@@ -3,6 +3,8 @@ FROM mcr.microsoft.com/dotnet/aspnet:7.0 AS base
 WORKDIR /app
 COPY ["appsettings.json", "appsettings.json"]
 EXPOSE 8082
+EXPOSE 80
+EXPOSE 44309
 
 # Use a imagem base do SDK do ASP.NET Core para compilar o aplicativo
 FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
