--- a/BackEnd/docker-compose.yml
+++ b/BackEnd/docker-compose.yml
@@ -1,13 +1,24 @@
 
 version: '3'
 services:
+
+  modulodb:
+    build: 
+     context: ./DBModule
+     dockerfile: Dockerfile 
+    container_name: DBModule_API
+    ports:
+      - "5008:80" # essa porta precisa ser configurada no terraform para que abra essa porta no security group, liberando o acesso
+    networks:
+      - network
+
   app_pessoal:
     build: 
       context: ./UserModule/UserAPI  
       dockerfile: Dockerfile 
     container_name: green_pessoal_API
     ports:
-      - "8081:80"
+      - "8081:80"   # essa porta precisa ser configurada no terraform para que abra essa porta no security group, liberando o acesso
     networks:
       - network
 
@@ -17,18 +28,7 @@ services:
      dockerfile: Dockerfile 
     container_name: green_empresa_API
     ports:
-      - "8082:80"
-    networks:
-      - network
-
-
-  modulodb:
-    build: 
-     context: ./DBModule
-     dockerfile: Dockerfile 
-    container_name: DBModule_API
-    ports:
-      - "5008:80"
+      - "8082:80" # essa porta precisa ser configurada no terraform para que abra essa porta no security group, liberando o acesso
     networks:
       - network
 
@@ -36,3 +36,7 @@ services:
 networks:
   network:
     driver: bridge
+
+
+
+    
